--- a/2_4文件列表页-缩略图.html
+++ b/2_4文件列表页-缩略图.html
@@ -287,9 +287,6 @@
       <!-- Unnamed (Connector) -->
       <div id="u52" class="ax_connector">
         <img id="u52_seg0" class="img " src="images/2_4文件列表页-缩略图/u52_seg0.png" alt="u52_seg0"/>
-        <img id="u52_seg1" class="img " src="images/2_4文件列表页-缩略图/u52_seg1.png" alt="u52_seg1"/>
-        <img id="u52_seg2" class="img " src="images/2_4文件列表页-缩略图/u52_seg2.png" alt="u52_seg2"/>
-        <img id="u52_seg3" class="img " src="images/2_4文件列表页-缩略图/u52_seg3.png" alt="u52_seg3"/>
         <!-- Unnamed () -->
         <div id="u53" class="text">
           <p><span></span></p>
@@ -324,20 +321,175 @@
       </div>
 
       <!-- Unnamed (形状) -->
-      <div id="u60" class="ax_文本段落">
-        <img id="u60_img" class="img " src="resources/images/transparent.gif"/>
+      <div id="u60" class="ax_形状">
+        <img id="u60_img" class="img " src="images/2_4文件列表页-缩略图/u60.png"/>
         <!-- Unnamed () -->
         <div id="u61" class="text">
-          <p><span>按菜单键改变显示模式；长按确定发送或删除文件</span></p>
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- 侧边菜单 (动态面板) -->
+      <div id="u62" class="ax_动态面板" data-label="侧边菜单">
+        <div id="u62_state0" class="panel_state" data-label="State1">
+          <div id="u62_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (形状) -->
+            <div id="u63" class="ax_形状">
+              <img id="u63_img" class="img " src="images/2_4文件列表页-缩略图/u63.png"/>
+              <!-- Unnamed () -->
+              <div id="u64" class="text">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (水平线) -->
+            <div id="u65" class="ax_水平线">
+              <img id="u65_start" class="img " src="resources/images/transparent.gif" alt="u65_start"/>
+              <img id="u65_end" class="img " src="resources/images/transparent.gif" alt="u65_end"/>
+              <img id="u65_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u65_line"/>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u66" class="ax_h2">
+              <img id="u66_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u67" class="text">
+                <p><span>全</span></p><p><span>部</span></p><p><span>文</span></p><p><span>件</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u68" class="ax_h2">
+              <img id="u68_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u69" class="text">
+                <p><span>矩</span></p><p><span>阵</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="u62_state1" class="panel_state" data-label="State2">
+          <div id="u62_state1_content" class="panel_state_content">
+
+            <!-- Unnamed (形状) -->
+            <div id="u70" class="ax_形状">
+              <img id="u70_img" class="img " src="images/2_4文件列表页-缩略图/u63.png"/>
+              <!-- Unnamed () -->
+              <div id="u71" class="text">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u72" class="ax_h2">
+              <img id="u72_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u73" class="text">
+                <p><span>功能菜单</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (水平线) -->
+            <div id="u74" class="ax_水平线">
+              <img id="u74_start" class="img " src="resources/images/transparent.gif" alt="u74_start"/>
+              <img id="u74_end" class="img " src="resources/images/transparent.gif" alt="u74_end"/>
+              <img id="u74_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u74_line"/>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u75" class="ax_h2">
+              <img id="u75_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u76" class="text">
+                <p><span>全部文件</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u77" class="ax_h2">
+              <img id="u77_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u78" class="text">
+                <p><span>视频文件</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u79" class="ax_h2">
+              <img id="u79_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u80" class="text">
+                <p><span>图片文件</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u81" class="ax_h2">
+              <img id="u81_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u82" class="text">
+                <p><span>音频文件</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u83" class="ax_h2">
+              <img id="u83_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u84" class="text">
+                <p><span>安装包</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u85" class="ax_形状">
+              <img id="u85_img" class="img " src="images/2_4文件列表页-缩略图/u85.png"/>
+              <!-- Unnamed () -->
+              <div id="u86" class="text">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (动态面板) -->
+            <div id="u87" class="ax_动态面板">
+              <div id="u87_state0" class="panel_state" data-label="State2">
+                <div id="u87_state0_content" class="panel_state_content">
+
+                  <!-- Unnamed (形状) -->
+                  <div id="u88" class="ax_形状">
+                    <img id="u88_img" class="img " src="images/2_4文件列表页-缩略图/u88.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u89" class="text">
+                      <p><span>列表</span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div id="u87_state1" class="panel_state" data-label="State1">
+                <div id="u87_state1_content" class="panel_state_content">
+
+                  <!-- Unnamed (形状) -->
+                  <div id="u90" class="ax_形状">
+                    <img id="u90_img" class="img " src="images/2_4文件列表页-缩略图/u88.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u91" class="text">
+                      <p><span>矩阵</span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
       <!-- Unnamed (形状) -->
-      <div id="u62" class="ax_形状">
-        <img id="u62_img" class="img " src="images/2_4文件列表页-缩略图/u62.png"/>
+      <div id="u92" class="ax_文本段落">
+        <img id="u92_img" class="img " src="resources/images/transparent.gif"/>
         <!-- Unnamed () -->
-        <div id="u63" class="text">
-          <p><span></span></p>
+        <div id="u93" class="text">
+          <p><span>焦点在屏幕左侧按左键显示模式；按菜单删除或发送文件</span></p>
         </div>
       </div>
     </div>
