--- a/2_5文件列表页－列表.html
+++ b/2_5文件列表页－列表.html
@@ -179,7 +179,7 @@
       <div id="u28" class="ax_水平线">
         <img id="u28_start" class="img " src="resources/images/transparent.gif" alt="u28_start"/>
         <img id="u28_end" class="img " src="resources/images/transparent.gif" alt="u28_end"/>
-        <img id="u28_line" class="img " src="images/2_5文件列表页－列表/u28_line.png" alt="u28_line"/>
+        <img id="u28_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u28_line"/>
       </div>
 
       <!-- Unnamed (Image) -->
@@ -204,7 +204,7 @@
       <div id="u33" class="ax_水平线">
         <img id="u33_start" class="img " src="resources/images/transparent.gif" alt="u33_start"/>
         <img id="u33_end" class="img " src="resources/images/transparent.gif" alt="u33_end"/>
-        <img id="u33_line" class="img " src="images/2_5文件列表页－列表/u28_line.png" alt="u33_line"/>
+        <img id="u33_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u33_line"/>
       </div>
 
       <!-- Unnamed (Image) -->
@@ -229,35 +229,35 @@
       <div id="u38" class="ax_水平线">
         <img id="u38_start" class="img " src="resources/images/transparent.gif" alt="u38_start"/>
         <img id="u38_end" class="img " src="resources/images/transparent.gif" alt="u38_end"/>
-        <img id="u38_line" class="img " src="images/2_5文件列表页－列表/u28_line.png" alt="u38_line"/>
+        <img id="u38_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u38_line"/>
       </div>
 
       <!-- Unnamed (水平线) -->
       <div id="u39" class="ax_水平线">
         <img id="u39_start" class="img " src="resources/images/transparent.gif" alt="u39_start"/>
         <img id="u39_end" class="img " src="resources/images/transparent.gif" alt="u39_end"/>
-        <img id="u39_line" class="img " src="images/2_5文件列表页－列表/u28_line.png" alt="u39_line"/>
+        <img id="u39_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u39_line"/>
       </div>
 
       <!-- Unnamed (水平线) -->
       <div id="u40" class="ax_水平线">
         <img id="u40_start" class="img " src="resources/images/transparent.gif" alt="u40_start"/>
         <img id="u40_end" class="img " src="resources/images/transparent.gif" alt="u40_end"/>
-        <img id="u40_line" class="img " src="images/2_5文件列表页－列表/u28_line.png" alt="u40_line"/>
+        <img id="u40_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u40_line"/>
       </div>
 
       <!-- Unnamed (水平线) -->
       <div id="u41" class="ax_水平线">
         <img id="u41_start" class="img " src="resources/images/transparent.gif" alt="u41_start"/>
         <img id="u41_end" class="img " src="resources/images/transparent.gif" alt="u41_end"/>
-        <img id="u41_line" class="img " src="images/2_5文件列表页－列表/u28_line.png" alt="u41_line"/>
+        <img id="u41_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u41_line"/>
       </div>
 
       <!-- Unnamed (水平线) -->
       <div id="u42" class="ax_水平线">
         <img id="u42_start" class="img " src="resources/images/transparent.gif" alt="u42_start"/>
         <img id="u42_end" class="img " src="resources/images/transparent.gif" alt="u42_end"/>
-        <img id="u42_line" class="img " src="images/2_5文件列表页－列表/u28_line.png" alt="u42_line"/>
+        <img id="u42_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u42_line"/>
       </div>
 
       <!-- Unnamed (Image) -->
@@ -306,38 +306,184 @@
       </div>
 
       <!-- Unnamed (形状) -->
-      <div id="u53" class="ax_文本段落">
+      <div id="u53" class="ax_h2">
         <img id="u53_img" class="img " src="resources/images/transparent.gif"/>
         <!-- Unnamed () -->
         <div id="u54" class="text">
-          <p><span style="font-family:'ArialMT', 'Arial';font-weight:400;">列表页</span><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">和现有基本功能一样</span></p><p><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">显示文件大小</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (形状) -->
-      <div id="u55" class="ax_h2">
-        <img id="u55_img" class="img " src="resources/images/transparent.gif"/>
-        <!-- Unnamed () -->
-        <div id="u56" class="text">
           <p><span>文件大小：23MB</span></p>
         </div>
       </div>
 
       <!-- Unnamed (形状) -->
-      <div id="u57" class="ax_形状">
-        <img id="u57_img" class="img " src="images/2_5文件列表页－列表/u57.png"/>
+      <div id="u55" class="ax_形状">
+        <img id="u55_img" class="img " src="images/2_5文件列表页－列表/u55.png"/>
         <!-- Unnamed () -->
-        <div id="u58" class="text">
+        <div id="u56" class="text">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (形状) -->
-      <div id="u59" class="ax_文本段落">
-        <img id="u59_img" class="img " src="resources/images/transparent.gif"/>
+      <div id="u57" class="ax_文本段落">
+        <img id="u57_img" class="img " src="resources/images/transparent.gif"/>
         <!-- Unnamed () -->
-        <div id="u60" class="text">
-          <p><span>按菜单键改变显示模式；长按确定发送或删除文件</span></p>
+        <div id="u58" class="text">
+          <p><span>焦点在屏幕左侧按左键显示模式；按菜单删除或发送文件</span></p>
+        </div>
+      </div>
+
+      <!-- 侧边菜单 (动态面板) -->
+      <div id="u59" class="ax_动态面板" data-label="侧边菜单">
+        <div id="u59_state0" class="panel_state" data-label="State1">
+          <div id="u59_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (形状) -->
+            <div id="u60" class="ax_形状">
+              <img id="u60_img" class="img " src="images/2_4文件列表页-缩略图/u63.png"/>
+              <!-- Unnamed () -->
+              <div id="u61" class="text">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (水平线) -->
+            <div id="u62" class="ax_水平线">
+              <img id="u62_start" class="img " src="resources/images/transparent.gif" alt="u62_start"/>
+              <img id="u62_end" class="img " src="resources/images/transparent.gif" alt="u62_end"/>
+              <img id="u62_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u62_line"/>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u63" class="ax_h2">
+              <img id="u63_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u64" class="text">
+                <p><span>全</span></p><p><span>部</span></p><p><span>文</span></p><p><span>件</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u65" class="ax_h2">
+              <img id="u65_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u66" class="text">
+                <p><span>列</span></p><p><span>表</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="u59_state1" class="panel_state" data-label="State2">
+          <div id="u59_state1_content" class="panel_state_content">
+
+            <!-- Unnamed (形状) -->
+            <div id="u67" class="ax_形状">
+              <img id="u67_img" class="img " src="images/2_4文件列表页-缩略图/u63.png"/>
+              <!-- Unnamed () -->
+              <div id="u68" class="text">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u69" class="ax_h2">
+              <img id="u69_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u70" class="text">
+                <p><span>功能菜单</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (水平线) -->
+            <div id="u71" class="ax_水平线">
+              <img id="u71_start" class="img " src="resources/images/transparent.gif" alt="u71_start"/>
+              <img id="u71_end" class="img " src="resources/images/transparent.gif" alt="u71_end"/>
+              <img id="u71_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u71_line"/>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u72" class="ax_h2">
+              <img id="u72_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u73" class="text">
+                <p><span>全部文件</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u74" class="ax_h2">
+              <img id="u74_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u75" class="text">
+                <p><span>视频文件</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u76" class="ax_h2">
+              <img id="u76_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u77" class="text">
+                <p><span>图片文件</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u78" class="ax_h2">
+              <img id="u78_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u79" class="text">
+                <p><span>音频文件</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u80" class="ax_h2">
+              <img id="u80_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u81" class="text">
+                <p><span>安装包</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u82" class="ax_形状">
+              <img id="u82_img" class="img " src="images/2_4文件列表页-缩略图/u85.png"/>
+              <!-- Unnamed () -->
+              <div id="u83" class="text">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (动态面板) -->
+            <div id="u84" class="ax_动态面板">
+              <div id="u84_state0" class="panel_state" data-label="State2">
+                <div id="u84_state0_content" class="panel_state_content">
+
+                  <!-- Unnamed (形状) -->
+                  <div id="u85" class="ax_形状">
+                    <img id="u85_img" class="img " src="images/2_4文件列表页-缩略图/u88.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u86" class="text">
+                      <p><span>列表</span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div id="u84_state1" class="panel_state" data-label="State1">
+                <div id="u84_state1_content" class="panel_state_content">
+
+                  <!-- Unnamed (形状) -->
+                  <div id="u87" class="ax_形状">
+                    <img id="u87_img" class="img " src="images/2_4文件列表页-缩略图/u88.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u88" class="text">
+                      <p><span>矩阵</span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
