--- a/2_4文件列表页-缩略图.html
+++ b/2_4文件列表页-缩略图.html
@@ -489,7 +489,7 @@
         <img id="u92_img" class="img " src="resources/images/transparent.gif"/>
         <!-- Unnamed () -->
         <div id="u93" class="text">
-          <p><span>焦点在屏幕左侧按左键显示模式；按菜单删除或发送文件</span></p>
+          <p><span>焦点在屏幕最左侧按左键设置显示模式；按菜单删除或发送文件</span></p>
         </div>
       </div>
     </div>
