--- a/2_5文件列表页－列表.html
+++ b/2_5文件列表页－列表.html
@@ -323,34 +323,34 @@
         </div>
       </div>
 
-      <!-- Unnamed (形状) -->
-      <div id="u57" class="ax_文本段落">
-        <img id="u57_img" class="img " src="resources/images/transparent.gif"/>
-        <!-- Unnamed () -->
-        <div id="u58" class="text">
-          <p><span>焦点在屏幕左侧按左键显示模式；按菜单删除或发送文件</span></p>
-        </div>
-      </div>
-
       <!-- 侧边菜单 (动态面板) -->
-      <div id="u59" class="ax_动态面板" data-label="侧边菜单">
-        <div id="u59_state0" class="panel_state" data-label="State1">
-          <div id="u59_state0_content" class="panel_state_content">
+      <div id="u57" class="ax_动态面板" data-label="侧边菜单">
+        <div id="u57_state0" class="panel_state" data-label="State1">
+          <div id="u57_state0_content" class="panel_state_content">
 
             <!-- Unnamed (形状) -->
-            <div id="u60" class="ax_形状">
-              <img id="u60_img" class="img " src="images/2_4文件列表页-缩略图/u63.png"/>
+            <div id="u58" class="ax_形状">
+              <img id="u58_img" class="img " src="images/2_4文件列表页-缩略图/u63.png"/>
               <!-- Unnamed () -->
-              <div id="u61" class="text">
+              <div id="u59" class="text">
                 <p><span></span></p>
               </div>
             </div>
 
             <!-- Unnamed (水平线) -->
-            <div id="u62" class="ax_水平线">
-              <img id="u62_start" class="img " src="resources/images/transparent.gif" alt="u62_start"/>
-              <img id="u62_end" class="img " src="resources/images/transparent.gif" alt="u62_end"/>
-              <img id="u62_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u62_line"/>
+            <div id="u60" class="ax_水平线">
+              <img id="u60_start" class="img " src="resources/images/transparent.gif" alt="u60_start"/>
+              <img id="u60_end" class="img " src="resources/images/transparent.gif" alt="u60_end"/>
+              <img id="u60_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u60_line"/>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u61" class="ax_h2">
+              <img id="u61_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u62" class="text">
+                <p><span>全</span></p><p><span>部</span></p><p><span>文</span></p><p><span>件</span></p>
+              </div>
             </div>
 
             <!-- Unnamed (形状) -->
@@ -358,46 +358,46 @@
               <img id="u63_img" class="img " src="resources/images/transparent.gif"/>
               <!-- Unnamed () -->
               <div id="u64" class="text">
-                <p><span>全</span></p><p><span>部</span></p><p><span>文</span></p><p><span>件</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (形状) -->
-            <div id="u65" class="ax_h2">
-              <img id="u65_img" class="img " src="resources/images/transparent.gif"/>
-              <!-- Unnamed () -->
-              <div id="u66" class="text">
                 <p><span>列</span></p><p><span>表</span></p>
               </div>
             </div>
           </div>
         </div>
-        <div id="u59_state1" class="panel_state" data-label="State2">
-          <div id="u59_state1_content" class="panel_state_content">
+        <div id="u57_state1" class="panel_state" data-label="State2">
+          <div id="u57_state1_content" class="panel_state_content">
 
             <!-- Unnamed (形状) -->
-            <div id="u67" class="ax_形状">
-              <img id="u67_img" class="img " src="images/2_4文件列表页-缩略图/u63.png"/>
+            <div id="u65" class="ax_形状">
+              <img id="u65_img" class="img " src="images/2_4文件列表页-缩略图/u63.png"/>
               <!-- Unnamed () -->
-              <div id="u68" class="text">
+              <div id="u66" class="text">
                 <p><span></span></p>
               </div>
             </div>
 
             <!-- Unnamed (形状) -->
-            <div id="u69" class="ax_h2">
-              <img id="u69_img" class="img " src="resources/images/transparent.gif"/>
+            <div id="u67" class="ax_h2">
+              <img id="u67_img" class="img " src="resources/images/transparent.gif"/>
               <!-- Unnamed () -->
-              <div id="u70" class="text">
+              <div id="u68" class="text">
                 <p><span>功能菜单</span></p>
               </div>
             </div>
 
             <!-- Unnamed (水平线) -->
-            <div id="u71" class="ax_水平线">
-              <img id="u71_start" class="img " src="resources/images/transparent.gif" alt="u71_start"/>
-              <img id="u71_end" class="img " src="resources/images/transparent.gif" alt="u71_end"/>
-              <img id="u71_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u71_line"/>
+            <div id="u69" class="ax_水平线">
+              <img id="u69_start" class="img " src="resources/images/transparent.gif" alt="u69_start"/>
+              <img id="u69_end" class="img " src="resources/images/transparent.gif" alt="u69_end"/>
+              <img id="u69_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u69_line"/>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u70" class="ax_h2">
+              <img id="u70_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u71" class="text">
+                <p><span>全部文件</span></p>
+              </div>
             </div>
 
             <!-- Unnamed (形状) -->
@@ -405,7 +405,7 @@
               <img id="u72_img" class="img " src="resources/images/transparent.gif"/>
               <!-- Unnamed () -->
               <div id="u73" class="text">
-                <p><span>全部文件</span></p>
+                <p><span>视频文件</span></p>
               </div>
             </div>
 
@@ -414,7 +414,7 @@
               <img id="u74_img" class="img " src="resources/images/transparent.gif"/>
               <!-- Unnamed () -->
               <div id="u75" class="text">
-                <p><span>视频文件</span></p>
+                <p><span>图片文件</span></p>
               </div>
             </div>
 
@@ -423,7 +423,7 @@
               <img id="u76_img" class="img " src="resources/images/transparent.gif"/>
               <!-- Unnamed () -->
               <div id="u77" class="text">
-                <p><span>图片文件</span></p>
+                <p><span>音频文件</span></p>
               </div>
             </div>
 
@@ -432,51 +432,42 @@
               <img id="u78_img" class="img " src="resources/images/transparent.gif"/>
               <!-- Unnamed () -->
               <div id="u79" class="text">
-                <p><span>音频文件</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (形状) -->
-            <div id="u80" class="ax_h2">
-              <img id="u80_img" class="img " src="resources/images/transparent.gif"/>
-              <!-- Unnamed () -->
-              <div id="u81" class="text">
                 <p><span>安装包</span></p>
               </div>
             </div>
 
             <!-- Unnamed (形状) -->
-            <div id="u82" class="ax_形状">
-              <img id="u82_img" class="img " src="images/2_4文件列表页-缩略图/u85.png"/>
+            <div id="u80" class="ax_形状">
+              <img id="u80_img" class="img " src="images/2_4文件列表页-缩略图/u85.png"/>
               <!-- Unnamed () -->
-              <div id="u83" class="text">
+              <div id="u81" class="text">
                 <p><span></span></p>
               </div>
             </div>
 
             <!-- Unnamed (动态面板) -->
-            <div id="u84" class="ax_动态面板">
-              <div id="u84_state0" class="panel_state" data-label="State2">
-                <div id="u84_state0_content" class="panel_state_content">
+            <div id="u82" class="ax_动态面板">
+              <div id="u82_state0" class="panel_state" data-label="State2">
+                <div id="u82_state0_content" class="panel_state_content">
+
+                  <!-- Unnamed (形状) -->
+                  <div id="u83" class="ax_形状">
+                    <img id="u83_img" class="img " src="images/2_4文件列表页-缩略图/u88.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u84" class="text">
+                      <p><span>列表</span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div id="u82_state1" class="panel_state" data-label="State1">
+                <div id="u82_state1_content" class="panel_state_content">
 
                   <!-- Unnamed (形状) -->
                   <div id="u85" class="ax_形状">
                     <img id="u85_img" class="img " src="images/2_4文件列表页-缩略图/u88.png"/>
                     <!-- Unnamed () -->
                     <div id="u86" class="text">
-                      <p><span>列表</span></p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div id="u84_state1" class="panel_state" data-label="State1">
-                <div id="u84_state1_content" class="panel_state_content">
-
-                  <!-- Unnamed (形状) -->
-                  <div id="u87" class="ax_形状">
-                    <img id="u87_img" class="img " src="images/2_4文件列表页-缩略图/u88.png"/>
-                    <!-- Unnamed () -->
-                    <div id="u88" class="text">
                       <p><span>矩阵</span></p>
                     </div>
                   </div>
@@ -484,6 +475,15 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (形状) -->
+      <div id="u87" class="ax_文本段落">
+        <img id="u87_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u88" class="text">
+          <p><span>焦点在屏幕最左侧按左键设置显示模式；按菜单删除或发送文件</span></p>
         </div>
       </div>
     </div>
