--- a/2_73发送进度条.html
+++ b/2_73发送进度条.html
@@ -426,20 +426,20 @@
             </div>
 
             <!-- Unnamed (形状) -->
-            <div id="u79" class="ax_文本段落">
-              <img id="u79_img" class="img " src="resources/images/transparent.gif"/>
+            <div id="u79" class="ax_形状">
+              <img id="u79_img" class="img " src="images/2_7发送文件与删除－发送到u盘/u79.png"/>
               <!-- Unnamed () -->
               <div id="u80" class="text">
-                <p><span>焦点在屏幕左侧按左键显示模式；按菜单删除或发送文件</span></p>
+                <p><span></span></p>
               </div>
             </div>
 
             <!-- Unnamed (形状) -->
-            <div id="u81" class="ax_形状">
-              <img id="u81_img" class="img " src="images/2_7发送文件与删除－发送到u盘/u81.png"/>
+            <div id="u81" class="ax_文本段落">
+              <img id="u81_img" class="img " src="resources/images/transparent.gif"/>
               <!-- Unnamed () -->
               <div id="u82" class="text">
-                <p><span></span></p>
+                <p><span>焦点在屏幕最左侧按左键设置显示模式；按菜单删除或发送文件</span></p>
               </div>
             </div>
           </div>
