--- a/2_6功能菜单.html
+++ b/2_6功能菜单.html
@@ -74,7 +74,7 @@
 
             <!-- Unnamed (Image) -->
             <div id="u5" class="ax_image">
-              <img id="u5_img" class="img " src="images/2_4文件列表页-缩略图/u4.png"/>
+              <img id="u5_img" class="img " src="images/2_4文件列表页-矩阵/u4.png"/>
               <!-- Unnamed () -->
               <div id="u6" class="text">
                 <p><span></span></p>
@@ -92,7 +92,7 @@
 
             <!-- Unnamed (Image) -->
             <div id="u9" class="ax_image">
-              <img id="u9_img" class="img " src="images/2_4文件列表页-缩略图/u4.png"/>
+              <img id="u9_img" class="img " src="images/2_4文件列表页-矩阵/u4.png"/>
               <!-- Unnamed () -->
               <div id="u10" class="text">
                 <p><span></span></p>
@@ -110,7 +110,7 @@
 
             <!-- Unnamed (Image) -->
             <div id="u13" class="ax_image">
-              <img id="u13_img" class="img " src="images/2_4文件列表页-缩略图/u4.png"/>
+              <img id="u13_img" class="img " src="images/2_4文件列表页-矩阵/u4.png"/>
               <!-- Unnamed () -->
               <div id="u14" class="text">
                 <p><span></span></p>
@@ -164,7 +164,7 @@
 
             <!-- Unnamed (Image) -->
             <div id="u25" class="ax_image">
-              <img id="u25_img" class="img " src="images/2_4文件列表页-缩略图/u24.jpg"/>
+              <img id="u25_img" class="img " src="images/2_4文件列表页-矩阵/u24.jpg"/>
               <!-- Unnamed () -->
               <div id="u26" class="text">
                 <p><span></span></p>
@@ -182,7 +182,7 @@
 
             <!-- Unnamed (Image) -->
             <div id="u29" class="ax_image">
-              <img id="u29_img" class="img " src="images/2_4文件列表页-缩略图/u28.jpg"/>
+              <img id="u29_img" class="img " src="images/2_4文件列表页-矩阵/u28.jpg"/>
               <!-- Unnamed () -->
               <div id="u30" class="text">
                 <p><span></span></p>
@@ -200,7 +200,7 @@
 
             <!-- Unnamed (Image) -->
             <div id="u33" class="ax_image">
-              <img id="u33_img" class="img " src="images/2_4文件列表页-缩略图/u32.png"/>
+              <img id="u33_img" class="img " src="images/2_4文件列表页-矩阵/u32.png"/>
               <!-- Unnamed () -->
               <div id="u34" class="text">
                 <p><span></span></p>
@@ -218,7 +218,7 @@
 
             <!-- Unnamed (Image) -->
             <div id="u37" class="ax_image">
-              <img id="u37_img" class="img " src="images/2_4文件列表页-缩略图/u36.png"/>
+              <img id="u37_img" class="img " src="images/2_4文件列表页-矩阵/u36.png"/>
               <!-- Unnamed () -->
               <div id="u38" class="text">
                 <p><span></span></p>
@@ -263,7 +263,7 @@
 
             <!-- Unnamed (形状) -->
             <div id="u47" class="ax_形状">
-              <img id="u47_img" class="img " src="images/2_4文件列表页-缩略图/u60.png"/>
+              <img id="u47_img" class="img " src="images/2_4文件列表页-矩阵/u60.png"/>
               <!-- Unnamed () -->
               <div id="u48" class="text">
                 <p><span></span></p>
@@ -303,7 +303,7 @@
 
             <!-- Unnamed (Image) -->
             <div id="u55" class="ax_image">
-              <img id="u55_img" class="img " src="images/2_4文件列表页-缩略图/u4.png"/>
+              <img id="u55_img" class="img " src="images/2_4文件列表页-矩阵/u4.png"/>
               <!-- Unnamed () -->
               <div id="u56" class="text">
                 <p><span></span></p>
@@ -339,7 +339,7 @@
 
             <!-- Unnamed (Image) -->
             <div id="u63" class="ax_image">
-              <img id="u63_img" class="img " src="images/2_4文件列表页-缩略图/u24.jpg"/>
+              <img id="u63_img" class="img " src="images/2_4文件列表页-矩阵/u24.jpg"/>
               <!-- Unnamed () -->
               <div id="u64" class="text">
                 <p><span></span></p>
@@ -357,7 +357,7 @@
 
             <!-- Unnamed (Image) -->
             <div id="u67" class="ax_image">
-              <img id="u67_img" class="img " src="images/2_4文件列表页-缩略图/u28.jpg"/>
+              <img id="u67_img" class="img " src="images/2_4文件列表页-矩阵/u28.jpg"/>
               <!-- Unnamed () -->
               <div id="u68" class="text">
                 <p><span></span></p>
@@ -375,7 +375,7 @@
 
             <!-- Unnamed (Image) -->
             <div id="u71" class="ax_image">
-              <img id="u71_img" class="img " src="images/2_4文件列表页-缩略图/u32.png"/>
+              <img id="u71_img" class="img " src="images/2_4文件列表页-矩阵/u32.png"/>
               <!-- Unnamed () -->
               <div id="u72" class="text">
                 <p><span></span></p>
@@ -393,7 +393,7 @@
 
             <!-- Unnamed (Image) -->
             <div id="u75" class="ax_image">
-              <img id="u75_img" class="img " src="images/2_4文件列表页-缩略图/u36.png"/>
+              <img id="u75_img" class="img " src="images/2_4文件列表页-矩阵/u36.png"/>
               <!-- Unnamed () -->
               <div id="u76" class="text">
                 <p><span></span></p>
@@ -413,12 +413,12 @@
             <div id="u79" class="ax_水平线">
               <img id="u79_start" class="img " src="resources/images/transparent.gif" alt="u79_start"/>
               <img id="u79_end" class="img " src="resources/images/transparent.gif" alt="u79_end"/>
-              <img id="u79_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u79_line"/>
+              <img id="u79_line" class="img " src="images/2_4文件列表页-矩阵/u65_line.png" alt="u79_line"/>
             </div>
 
             <!-- Unnamed (Image) -->
             <div id="u80" class="ax_image">
-              <img id="u80_img" class="img " src="images/2_4文件列表页-缩略图/u4.png"/>
+              <img id="u80_img" class="img " src="images/2_4文件列表页-矩阵/u4.png"/>
               <!-- Unnamed () -->
               <div id="u81" class="text">
                 <p><span></span></p>
@@ -438,12 +438,12 @@
             <div id="u84" class="ax_水平线">
               <img id="u84_start" class="img " src="resources/images/transparent.gif" alt="u84_start"/>
               <img id="u84_end" class="img " src="resources/images/transparent.gif" alt="u84_end"/>
-              <img id="u84_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u84_line"/>
+              <img id="u84_line" class="img " src="images/2_4文件列表页-矩阵/u65_line.png" alt="u84_line"/>
             </div>
 
             <!-- Unnamed (Image) -->
             <div id="u85" class="ax_image">
-              <img id="u85_img" class="img " src="images/2_4文件列表页-缩略图/u4.png"/>
+              <img id="u85_img" class="img " src="images/2_4文件列表页-矩阵/u4.png"/>
               <!-- Unnamed () -->
               <div id="u86" class="text">
                 <p><span></span></p>
@@ -463,35 +463,35 @@
             <div id="u89" class="ax_水平线">
               <img id="u89_start" class="img " src="resources/images/transparent.gif" alt="u89_start"/>
               <img id="u89_end" class="img " src="resources/images/transparent.gif" alt="u89_end"/>
-              <img id="u89_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u89_line"/>
+              <img id="u89_line" class="img " src="images/2_4文件列表页-矩阵/u65_line.png" alt="u89_line"/>
             </div>
 
             <!-- Unnamed (水平线) -->
             <div id="u90" class="ax_水平线">
               <img id="u90_start" class="img " src="resources/images/transparent.gif" alt="u90_start"/>
               <img id="u90_end" class="img " src="resources/images/transparent.gif" alt="u90_end"/>
-              <img id="u90_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u90_line"/>
+              <img id="u90_line" class="img " src="images/2_4文件列表页-矩阵/u65_line.png" alt="u90_line"/>
             </div>
 
             <!-- Unnamed (水平线) -->
             <div id="u91" class="ax_水平线">
               <img id="u91_start" class="img " src="resources/images/transparent.gif" alt="u91_start"/>
               <img id="u91_end" class="img " src="resources/images/transparent.gif" alt="u91_end"/>
-              <img id="u91_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u91_line"/>
+              <img id="u91_line" class="img " src="images/2_4文件列表页-矩阵/u65_line.png" alt="u91_line"/>
             </div>
 
             <!-- Unnamed (水平线) -->
             <div id="u92" class="ax_水平线">
               <img id="u92_start" class="img " src="resources/images/transparent.gif" alt="u92_start"/>
               <img id="u92_end" class="img " src="resources/images/transparent.gif" alt="u92_end"/>
-              <img id="u92_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u92_line"/>
+              <img id="u92_line" class="img " src="images/2_4文件列表页-矩阵/u65_line.png" alt="u92_line"/>
             </div>
 
             <!-- Unnamed (水平线) -->
             <div id="u93" class="ax_水平线">
               <img id="u93_start" class="img " src="resources/images/transparent.gif" alt="u93_start"/>
               <img id="u93_end" class="img " src="resources/images/transparent.gif" alt="u93_end"/>
-              <img id="u93_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u93_line"/>
+              <img id="u93_line" class="img " src="images/2_4文件列表页-矩阵/u65_line.png" alt="u93_line"/>
             </div>
 
             <!-- Unnamed (Image) -->
@@ -523,7 +523,7 @@
 
             <!-- Unnamed (Image) -->
             <div id="u100" class="ax_image">
-              <img id="u100_img" class="img " src="images/2_4文件列表页-缩略图/u32.png"/>
+              <img id="u100_img" class="img " src="images/2_4文件列表页-矩阵/u32.png"/>
               <!-- Unnamed () -->
               <div id="u101" class="text">
                 <p><span></span></p>
@@ -571,7 +571,7 @@
 
       <!-- Unnamed (形状) -->
       <div id="u110" class="ax_形状">
-        <img id="u110_img" class="img " src="images/2_4文件列表页-缩略图/u63.png"/>
+        <img id="u110_img" class="img " src="images/2_4文件列表页-矩阵/u63.png"/>
         <!-- Unnamed () -->
         <div id="u111" class="text">
           <p><span></span></p>
@@ -591,7 +591,7 @@
       <div id="u114" class="ax_水平线">
         <img id="u114_start" class="img " src="resources/images/transparent.gif" alt="u114_start"/>
         <img id="u114_end" class="img " src="resources/images/transparent.gif" alt="u114_end"/>
-        <img id="u114_line" class="img " src="images/2_4文件列表页-缩略图/u65_line.png" alt="u114_line"/>
+        <img id="u114_line" class="img " src="images/2_4文件列表页-矩阵/u65_line.png" alt="u114_line"/>
       </div>
 
       <!-- Unnamed (形状) -->
@@ -651,9 +651,6 @@
       <!-- Unnamed (Connector) -->
       <div id="u127" class="ax_connector">
         <img id="u127_seg0" class="img " src="images/2_6功能菜单/u127_seg0.png" alt="u127_seg0"/>
-        <img id="u127_seg1" class="img " src="images/2_6功能菜单/u127_seg1.png" alt="u127_seg1"/>
-        <img id="u127_seg2" class="img " src="images/2_6功能菜单/u127_seg2.png" alt="u127_seg2"/>
-        <img id="u127_seg3" class="img " src="images/2_6功能菜单/u127_seg3.png" alt="u127_seg3"/>
         <!-- Unnamed () -->
         <div id="u128" class="text">
           <p><span></span></p>
@@ -665,13 +662,13 @@
         <img id="u129_img" class="img " src="resources/images/transparent.gif"/>
         <!-- Unnamed () -->
         <div id="u130" class="text">
-          <p><span>显示模式菜单在屏幕左侧缩略显示，焦点向左移动到菜单时，展开显示。</span></p><p><span>样式（矩阵、列表）：焦点可以移动到显示样式，切换矩阵和列表，点击生效；默认为矩阵显示。</span></p><p><span>文件类型：焦点落到文件类型，点击后生效；默认为全部文件。</span></p><p><span>向右离开显示模式菜单</span></p><p><span>&nbsp;</span></p>
+          <p><span>&#149; 显示模式菜单在屏幕左侧缩略显示，焦点向左移动到菜单时，展开显示。</span></p><p><span>&#149; 样式（矩阵、列表）：焦点可以移动到显示样式，切换矩阵和列表，点击生效；默认为矩阵显示。</span></p><p><span>&#149; 文件类型：焦点落到文件类型，点击后生效；默认为全部文件。</span></p><p><span>&#149; 向右离开显示模式菜单</span></p><p><span>&#149; 有小色条标示当前的文件类型状态</span></p><p><span>&nbsp;</span></p>
         </div>
       </div>
 
       <!-- Unnamed (形状) -->
       <div id="u131" class="ax_形状">
-        <img id="u131_img" class="img " src="images/2_4文件列表页-缩略图/u85.png"/>
+        <img id="u131_img" class="img " src="images/2_4文件列表页-矩阵/u95.png"/>
         <!-- Unnamed () -->
         <div id="u132" class="text">
           <p><span></span></p>
@@ -685,7 +682,7 @@
 
             <!-- Unnamed (形状) -->
             <div id="u134" class="ax_形状">
-              <img id="u134_img" class="img " src="images/2_4文件列表页-缩略图/u88.png"/>
+              <img id="u134_img" class="img " src="images/2_4文件列表页-矩阵/u98.png"/>
               <!-- Unnamed () -->
               <div id="u135" class="text">
                 <p><span>矩阵</span></p>
@@ -698,13 +695,22 @@
 
             <!-- Unnamed (形状) -->
             <div id="u136" class="ax_形状">
-              <img id="u136_img" class="img " src="images/2_4文件列表页-缩略图/u88.png"/>
+              <img id="u136_img" class="img " src="images/2_4文件列表页-矩阵/u98.png"/>
               <!-- Unnamed () -->
               <div id="u137" class="text">
                 <p><span>列表</span></p>
               </div>
             </div>
           </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (形状) -->
+      <div id="u138" class="ax_形状">
+        <img id="u138_img" class="img " src="images/2_6功能菜单/u138.png"/>
+        <!-- Unnamed () -->
+        <div id="u139" class="text">
+          <p><span></span></p>
         </div>
       </div>
     </div>
