--- a/1_2检测到u盘－常态浮层文字提示.html
+++ b/1_2检测到u盘－常态浮层文字提示.html
@@ -81,7 +81,7 @@
         <img id="u6_img" class="img " src="resources/images/transparent.gif"/>
         <!-- Unnamed () -->
         <div id="u7" class="text">
-          <p><span style="font-family:'ArialMT', 'Arial';font-weight:400;">角落</span><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">常态浮出提示</span></p><p><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">检测到U盘时有，拔出时消失</span></p>
+          <p><span style="font-family:'ArialMT', 'Arial';font-weight:400;">U盘插入后，会显示</span><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;"></span></p><p><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">&nbsp;</span></p><p><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">启动过文件管理器或拔出U盘，会消失</span></p>
         </div>
       </div>
     </div>
