--- a/版本.html
+++ b/版本.html
@@ -90,7 +90,7 @@
 
         <!-- Unnamed (单元格) -->
         <div id="u9" class="ax_单元格">
-          <img id="u9_img" class="img " src="images/版本/u9.png"/>
+          <img id="u9_img" class="img " src="images/版本/u1.png"/>
           <!-- Unnamed () -->
           <div id="u10" class="text">
             <p><span>1.4</span></p>
@@ -99,7 +99,7 @@
 
         <!-- Unnamed (单元格) -->
         <div id="u11" class="ax_单元格">
-          <img id="u11_img" class="img " src="images/版本/u11.png"/>
+          <img id="u11_img" class="img " src="images/版本/u3.png"/>
           <!-- Unnamed () -->
           <div id="u12" class="text">
             <p><span>去除长按确定键，改为菜单键删除和发送，显示模式左侧划出</span></p>
@@ -108,7 +108,7 @@
 
         <!-- Unnamed (单元格) -->
         <div id="u13" class="ax_单元格">
-          <img id="u13_img" class="img " src="images/版本/u13.png"/>
+          <img id="u13_img" class="img " src="images/版本/u5.png"/>
           <!-- Unnamed () -->
           <div id="u14" class="text">
             <p><span>2016.1.18</span></p>
@@ -117,9 +117,45 @@
 
         <!-- Unnamed (单元格) -->
         <div id="u15" class="ax_单元格">
-          <img id="u15_img" class="img " src="images/版本/u15.png"/>
+          <img id="u15_img" class="img " src="images/版本/u7.png"/>
           <!-- Unnamed () -->
           <div id="u16" class="text">
+            <p><span>王溪杨</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u17" class="ax_单元格">
+          <img id="u17_img" class="img " src="images/版本/u17.png"/>
+          <!-- Unnamed () -->
+          <div id="u18" class="text">
+            <p><span>1.5</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u19" class="ax_单元格">
+          <img id="u19_img" class="img " src="images/版本/u19.png"/>
+          <!-- Unnamed () -->
+          <div id="u20" class="text">
+            <p><span>浮层启动过文件管理器就会消失</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u21" class="ax_单元格">
+          <img id="u21_img" class="img " src="images/版本/u21.png"/>
+          <!-- Unnamed () -->
+          <div id="u22" class="text">
+            <p><span>2016.4.22</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u23" class="ax_单元格">
+          <img id="u23_img" class="img " src="images/版本/u23.png"/>
+          <!-- Unnamed () -->
+          <div id="u24" class="text">
             <p><span>王溪杨</span></p>
           </div>
         </div>
