--- a/1_5u盘图标左划出.html
+++ b/1_5u盘图标左划出.html
@@ -1,14 +1,14 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>1.5U盘不再是信号源</title>
+    <title>1.5U盘图标左划出</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <link href="resources/css/jquery-ui-themes.css" type="text/css" rel="stylesheet"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
-    <link href="files/1_5u盘不再是信号源/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="files/1_5u盘图标左划出/styles.css" type="text/css" rel="stylesheet"/>
     <script src="resources/scripts/jquery-1.7.1.min.js"></script>
     <script src="resources/scripts/jquery-ui-1.8.10.custom.min.js"></script>
     <script src="resources/scripts/axure/axQuery.js"></script>
@@ -37,7 +37,7 @@
     <script src="resources/scripts/axure/adaptive.js"></script>
     <script src="resources/scripts/axure/tree.js"></script>
     <script src="resources/scripts/axure/init.temp.js"></script>
-    <script src="files/1_5u盘不再是信号源/data.js"></script>
+    <script src="files/1_5u盘图标左划出/data.js"></script>
     <script src="resources/scripts/axure/legacy.js"></script>
     <script src="resources/scripts/axure/viewer.js"></script>
     <script type="text/javascript">
@@ -51,71 +51,28 @@
 
       <!-- Unnamed (Image) -->
       <div id="u0" class="ax_image">
-        <img id="u0_img" class="img " src="images/1_5u盘不再是信号源/u0.jpg"/>
+        <img id="u0_img" class="img " src="images/1_5u盘图标左划出/u0.jpg"/>
         <!-- Unnamed () -->
         <div id="u1" class="text">
           <p><span></span></p>
         </div>
       </div>
 
-      <!-- Unnamed (形状) -->
-      <div id="u2" class="ax_形状">
-        <img id="u2_img" class="img " src="images/1_5u盘不再是信号源/u2.png"/>
+      <!-- Unnamed (Connector) -->
+      <div id="u2" class="ax_connector">
+        <img id="u2_seg0" class="img " src="images/1_5u盘图标左划出/u2_seg0.png" alt="u2_seg0"/>
         <!-- Unnamed () -->
         <div id="u3" class="text">
-          <p><span>HDMI</span></p><p><span>&nbsp;</span></p><p><span>&nbsp;</span></p><p><span>&nbsp;</span></p><p><span>&nbsp;</span></p><p><span>&nbsp;</span></p><p><span>&nbsp;</span></p><p><span>AV</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (水平线) -->
-      <div id="u4" class="ax_水平线">
-        <img id="u4_start" class="img " src="resources/images/transparent.gif" alt="u4_start"/>
-        <img id="u4_end" class="img " src="resources/images/transparent.gif" alt="u4_end"/>
-        <img id="u4_line" class="img " src="images/1_5u盘不再是信号源/u4_line.png" alt="u4_line"/>
-      </div>
-
-      <!-- Unnamed (Connector) -->
-      <div id="u5" class="ax_connector">
-        <img id="u5_seg0" class="img " src="images/1_5u盘不再是信号源/u5_seg0.png" alt="u5_seg0"/>
-        <!-- Unnamed () -->
-        <div id="u6" class="text">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (形状) -->
-      <div id="u7" class="ax_文本段落">
-        <img id="u7_img" class="img " src="resources/images/transparent.gif"/>
+      <div id="u4" class="ax_文本段落">
+        <img id="u4_img" class="img " src="resources/images/transparent.gif"/>
         <!-- Unnamed () -->
-        <div id="u8" class="text">
-          <p><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">信号源位置不再有</span><span style="font-family:'ArialMT', 'Arial';font-weight:400;">U</span><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">盘</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Image) -->
-      <div id="u9" class="ax_image">
-        <img id="u9_img" class="img " src="images/1_5u盘不再是信号源/u9.jpg"/>
-        <!-- Unnamed () -->
-        <div id="u10" class="text">
-          <p><span></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Connector) -->
-      <div id="u11" class="ax_connector">
-        <img id="u11_seg0" class="img " src="images/1_5u盘不再是信号源/u11_seg0.png" alt="u11_seg0"/>
-        <!-- Unnamed () -->
-        <div id="u12" class="text">
-          <p><span></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (形状) -->
-      <div id="u13" class="ax_文本段落">
-        <img id="u13_img" class="img " src="resources/images/transparent.gif"/>
-        <!-- Unnamed () -->
-        <div id="u14" class="text">
-          <p><span>这里也不再有USB</span></p>
+        <div id="u5" class="text">
+          <p><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">插入</span><span style="font-family:'ArialMT', 'Arial';font-weight:400;">U</span><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">盘后，Launcher左侧划出监测到</span><span style="font-family:'ArialMT', 'Arial';font-weight:400;">U</span><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">盘的卡牌</span></p>
         </div>
       </div>
     </div>
